--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>CheapSheet - Find Deals Around You!</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div id="map"></div>
-    <div class="searchbar"></div>
-    <div class="databar"></div>
+<!DOCTYPE HTML5>
+<html>
+   <head>
+      <title>Boxing Gyms in NYC</title>
+      <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+   </head>
+   <body>
 
 
 
-    <script type="text/javascript" src="js/map.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg&callback=initMap">
-    </script>
-  </body>
+      <div class="col-md-2" >
+         <ul data-bind="foreach: locationList" class="list">
+            <li data-bind="click: $parent.onLocationClick"><span data-bind="text:name"></span></li>
+         </ul>
+      </div>
+
+      <p>izaberi se bre
+         <form>
+         <input data-bind="value: individualGyms" />
+         <button type="submit" data-bind="click: searchGyms"></button>
+         </form>
+      </p>
+
+
+      </div>
+      <div id="alert-box" class="msgbox alert alert-warning">Error</div>
+      <div id="map-canvas" data-bind="map: myMap"></div>
+      <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+      <script type="text/javascript" src="js/knockout-3.3.0.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="js/apps.js"></script>
+   </body>
 </html>
