--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
       <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
    </head>
    <body>
-
-
-
       <div class="col-md-2" >
+      </div>
+
+      <div class="col-md-2">izaberi se bre
+         <form>
+         <input data-bind="value: search, valueUpdate: 'afterkeydown'" />
          <ul data-bind="foreach: locationList" class="list">
             <li data-bind="click: $parent.onLocationClick"><span data-bind="text:name"></span></li>
          </ul>
-      </div>
-
-      <p>izaberi se bre
-         <form>
-         <input data-bind="value: individualGyms" />
-         <button type="submit" data-bind="click: searchGyms"></button>
          </form>
-      </p>
+      </div>
 
 
       </div>
