--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="col-md-2">izaberi se bre
          <form>
          <input data-bind="value: search, valueUpdate: 'afterkeydown'" />
-         <ul data-bind="foreach: locationList" class="list">
+         <ul data-bind="foreach: searchGyms" class="list">
             <li data-bind="click: $parent.onLocationClick"><span data-bind="text:name"></span></li>
          </ul>
          </form>
