--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <link rel="stylesheet" href="css/bootstrap.min.css">
 
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg&callback=initMap" async defer></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg" async defer></script>
       <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
       <script src="js/knockout-3.3.0.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
