--- a/index.html
+++ b/index.html
@@ -4,50 +4,41 @@
       <title>Boxing Gyms in NYC</title>
       <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
       <meta charset="utf-8">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
    </head>
    <body>
-
-
       <div class="col-md-2">
          <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            BOXING IN YOUR AREA
+         <strong>CLICK TO </br> BROWSE BOXING GYMS </br> IN MANHATTAN</strong>
          </a>
-         <div class="collapse.in" id="collapseExample">
+         <div class="collapse" id="collapseExample">
             <div class="well">
                <ul data-bind="foreach: searchGyms" class="list">
                   <li data-bind="click: $parent.onLocationClick"><span data-bind="text:name"></span></li>
                </ul>
-
-            <form class="form">
-            <input data-bind="value: search, valueUpdate: 'afterkeydown'" placeholder="Search" class="search"/>
-            </form>
-
-              </div>
+               <form class="form">
+                  <input data-bind="value: search, valueUpdate: 'afterkeydown'" placeholder="Search" class="search"/>
+               </form>
+            </div>
          </div>
-
       </div>
-
-      <div id="map-canvas" data-bind="map: myMap"></div>
+      <div id="map-canvas"></div>
       <div id="alert-box" class="msgbox alert alert-warning">Error</div>
 
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg" ></script>
-      <script src="js/jquery.collapsible.js"></script>
+      <script  async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg" onerror="googleError()"></script>
       <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+      <script src="js/jquery.collapsible.js"></script>
       <script src="js/knockout-3.3.0.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
       <script src="js/apps.js"></script>
 
       <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/bootstrap-theme.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
       <link rel="stylesheet" href="css/style.css">
-
       <script>
-      var googleError = function(){
-         alert("Failed to load Google map, please reload.");
-      }
-   </script>
-
+         var googleError = function(){
+            alert("Failed to load Google map, please reload.");
+         }
+      </script>
    </body>
 </html>
