--- a/index.html
+++ b/index.html
@@ -1,42 +1,56 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <html>
-   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta charset="utf-8">
-      <title>Boxing Gyms in NYC</title>
-   </head>
-   <body>
-      <div class="col-md-2">
-         <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-         <strong>CLICK TO </br> BROWSE BOXING GYMS </br> IN MANHATTAN</strong>
-         </a>
-         <div class="collapse" id="collapseExample">
-            <div class="well">
-               <ul data-bind="foreach: searchGyms" class="list">
-                  <li data-bind="click: $parent.onLocationClick"><span data-bind="text:name"></span></li>
-               </ul>
-               <form class="form">
-                  <input data-bind="value: search, valueUpdate: 'afterkeydown'" placeholder="Search" class="search"/>
-               </form>
-            </div>
-         </div>
-      </div>
-      <div id="map-canvas"></div>
-      <div id="alert-box" class="msgbox alert alert-warning">Error</div>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Boxing Gyms in NYC</title>
+</head>
+
+<body>
+
+    <div id="wrapper">
+        <div id="sidebar-wrapper">
+
+            <ul data-bind="foreach: searchGyms" class="list">
+                <li data-bind="click: $parent.onLocationClick"><span data-bind="text:name" class="sidebar-brand"></span>
+                </li>
+            </ul>
+
+            <form class="form">
+                <input data-bind="value: search, valueUpdate: 'afterkeydown'" placeholder="Search" class="search" />
+            </form>
+
+        </div>
 
 
-      <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-      <script src="js/jquery.collapsible.js"></script>
-      <script src="js/knockout-3.3.0.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-      <script src="js/apps.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg&amp;callback=initApp" async></script>
+        <div><a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a></div>
+    </div>
 
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/style.css">
+    <div id="alert-box" class="msgbox alert alert-warning">Error</div>
+    <div id="map-canvas"> </div>
 
-   </body>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/knockout-3.3.0.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="js/apps.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg&amp;callback=initApp" async></script>
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
+
+    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
+
+
+
+</body>
+
 </html>
