--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
    <script src="js/knockout-3.3.0.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
    <script src="js/apps.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg&amp;callback=initApp" async></script>
+   <script>
+      var googleError = function(){
+         alert("Failed to load Google map; please check your Internet connection.");
+      }
+   </script>
+   <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmkRJgL99vrPsypcFhBzeg3l1paHlHxTg&amp;callback=initApp" onerror="googleError()"></script>
    <script>
       $("#menu-toggle").click(function(e) {
          e.preventDefault();
